@@ -1,3 +1,4 @@
+$LOAD_PATH.unshift(File.dirname(__FILE__))
 require 'spec/version'
 require 'spec/expectations'
 require 'spec/mocks'
