@@ -2,3 +2,4 @@ require 'spec/expectations/should/base'
 require 'spec/expectations/should/have'
 require 'spec/expectations/should/not'
 require 'spec/expectations/should/should'
+require 'spec/expectations/should/change'
